--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 	<main>
 		<header class="d-flex" id="header">
 			<div id="logo">
-				<a href="#preview">
-					<img src="img/logo.png">
+				<a href="#preview" class="logo">
+					<img src="img/logo.png" alt="Логотип">
 				</a>
 			</div>
 			<nav class="main-menu" id="main-menu">
+				<a href="#" class="menu-trigger">&#9776;</a>
 				<ul class="d-flex">
 					<li><a href="#services">Услуги</a></li>
 					<li><a href="#portfolio">Портфолио</a></li>
@@ -28,123 +29,120 @@
 					<li><a href="#contacts">Контакты</a></li>
 				</ul>
 			</nav>
+			<a href="tel:+79774976285" class="number">+79774976285</a>
 		</header>
-		<div class="shadow block preview block-img" id="preview">
-   			<h1><img src="img/logo.png"> - Создание и продвижение сайтов</h1>
+		<div class="block preview block-img" id="preview">
+   			<h1><img src="img/logo-word.png" alt="proHTML"> - Создание и продвижение сайтов</h1>
 			<img src="img/zig-light.png" class="icon-bg">
 			<p>Вам нужен сайт?! Адаптивный, с высокой скоростью загрузки? Landing-Page, сайт-визитка или интернет-магазин? Тогда звоните!</p>
+			<a class="btn" href="tel:+79774976285" title="+79774976285">Позвонить сейчас</a>
 			<div id="toBtm">
 				<a href="#services">
-					<img src="img/arrow-btm.png" class="icon">
+					<img src="img/arrow-btm.png" class="icon" alt="Вниз">
 				</a>
 			</div>
 		</div>
-		<div class="shadow block services" id="services">
+		<div class="block services" id="services">
 			<div class="wrapper">
 				<span class="foreword">Услуги</span>
 				<img src="img/zig.png" class="icon-bg">
 				<h2>Что я делаю</h2>
 				<div class="services-items items">
 					<div class="services-item item">
-						<img src="img/design.png" class="icon">
+						<img src="img/design.png" class="icon" alt="Дизайн">
 						<h3>Дизайн</h3>
 						<p>Создание дизайн-макета в программах Axure, Adobe XD, Adobe Photoshop, Adobe Illustrator, Figma, CorelDRaw</p>
 					</div>
 					<div class="services-item item">
-						<img src="img/code.png" class="icon">
+						<img src="img/code.png" class="icon" alt="Вёрстка">
 						<h3>Вёрстка</h3>
 						<p>Валидная, семантическая, адаптивная вёрстка с помощью стека технологий HTML & CSS & JavaScript</p>
 					</div>
 					<div class="services-item item">
-						<img src="img/cms.png" class="icon">
+						<img src="img/cms.png" class="icon" alt="CMS">
 						<h3>Работа с CMS</h3>
-						<p>Индивидуальный выбор CMS под задачи определенного сайта, исходя из требований и  функционала.</p>
+						<p>Индивидуальный выбор CMS под задачи определенного сайта, исходя из требований и функционала.</p>
 					</div>
 				</div>
 				<div class="services-items items">
 					<div class="services-item item">
-						<img src="img/framework.png" class="icon">
+						<img src="img/framework.png" class="icon" alt="Библиотеки">
 						<h3>Применение библиотек</h3>
 						<p>Применение современных библиотек и фреймворков Bootstrap, Angular.JS, Vue.JS, React и jQuery</p>
 					</div>
 					<div class="services-item item">
-						<img src="img/seo.png" class="icon">
+						<img src="img/seo.png" class="icon" alt="SEO">
 						<h3>SEO-оптимизация</h3>
 						<p>Настройка индексации сайта, оптимизация скорости загрузки страниц, добавление необходимых SEO-тегов</p>
 					</div>
 					<div class="services-item item">
-						<img src="img/analytics.png" class="icon">
+						<img src="img/analytics.png" class="icon" alt="Аналитика">
 						<h3>Веб-аналитика</h3>
 						<p>Подключение сервисов Яндекс.Метрика, Яндекс.Вебмастер, Google Analytics и др.</p>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="shadow block technologies" id="technologies">
+		<hr>
+		<div class="block technologies" id="technologies">
 			<div class="wrapper">
 				<span class="foreword">Технологии</span>
 				<img src="img/zig.png" class="icon-bg">
 				<h2>Чем я это делаю</h2>
 				<div class="technologies-slider">
-					<div><img src="img/coreldraw.png" class="icon-bg"></div>
-					<div><img src="img/photoshop.png" class="icon-bg"></div>
-					<div><img src="img/html.png" class="icon-bg"></div>
-					<div><img src="img/css.png" class="icon-bg"></div>
-					<div><img src="img/js.png" class="icon-bg"></div>
-					<div><img src="img/figma.png" class="icon-bg"></div>
-					<div><img src="img/bootstrap.png" class="icon-bg"></div>
-					<div><img src="img/illustrator.png" class="icon-bg"></div>
-					<div><img src="img/git.png" class="icon-bg"></div>
-					<div><img src="img/jquery.png" class="icon-bg"></div>
-					<div><img src="img/axure.png" class="icon-bg"></div>
-					<div><img src="img/xd.png" class="icon-bg"></div>
-					<div><img src="img/wordpress.png" class="icon-bg"></div>
-					<div><img src="img/joomla.png" class="icon-bg"></div>
-					<div><img src="img/moguta.png" class="icon-bg"></div>
+					<div><img src="img/coreldraw.png" class="icon-bg" title="CorelDRaw" alt="CorelDRaw"></div>
+					<div><img src="img/photoshop.png" class="icon-bg" title="Adobe Photoshop" alt="Adobe Photoshop"></div>
+					<div><img src="img/html.png" class="icon-bg" title="HTML" alt="HTML"></div>
+					<div><img src="img/css.png" class="icon-bg" title="CSS" alt="CSS"></div>
+					<div><img src="img/js.png" class="icon-bg" title="JavaScript" alt="JavaScript"></div>
+					<div><img src="img/figma.png" class="icon-bg" title="Figma" alt="Figma"></div>
+					<div><img src="img/bootstrap.png" class="icon-bg" title="Bootstrap" alt="Bootstrap"></div>
+					<div><img src="img/illustrator.png" class="icon-bg" title="Adobe Illustrator" alt="Adobe Illustrator"></div>
+					<div><img src="img/git.png" class="icon-bg" title="Git" alt="Git"></div>
+					<div><img src="img/jquery.png" class="icon-bg" title="jQuery" alt="jQuery"></div>
+					<div><img src="img/axure.png" class="icon-bg" title="Axure" alt="Axure"></div>
+					<div><img src="img/xd.png" class="icon-bg" title="Adobe XD" alt="Adobe XD"></div>
+					<div><img src="img/wordpress.png" class="icon-bg" title="Wordpress" alt="Wordpress"></div>
+					<div><img src="img/joomla.png" class="icon-bg" title="Joomla" alt="Joomla"></div>
+					<div><img src="img/moguta.png" class="icon-bg" title="Moguta CMS" alt="Moguta CMS"></div>
 				</div>
 			</div>
 		</div>
-		<div class="shadow block portfolio" id="portfolio">
+		<div class="block portfolio block-clr" id="portfolio">
 			<div class="wrapper">
 				<span class="foreword">Портфолио</span>
-				<img src="img/zig.png" class="icon-bg">
+				<img src="img/zig-light.png" class="icon-bg">
 				<h2>Мои работы</h2>
-				<div class="portfolio-items items first">
-					<a href="#" class="portfolio-item item">
-						<span class="categories">Сайт-портфолио</span>
-						<h3>Boostfolia</h3>
+				<div class="portfolio-items items">
+					<a href="https://prohtml.github.io/Boostfolia" class="portfolio-item item" target="_blank">
+						<img src="img/portfolio1.png" alt="Перейти к просмотру">
 					</a>
-					<a href="#" class="portfolio-item item">
-						<span class="categories">Сайт компании</span>
-						<h3>Lovece</h3>
+					<a href="https://prohtml.github.io/Lovece" class="portfolio-item item" target="_blank">
+						<img src="img/portfolio2.png" alt="Перейти к просмотру">
 					</a>
-					<a href="#" class="portfolio-item item">
-						<span class="categories">Сайт компании</span>
-						<h3>Lovece</h3>
+					<a href="https://prohtml.github.io/KotSimon" class="portfolio-item item" target="_blank">
+						<img src="img/portfolio3.png" alt="Перейти к просмотру">
 					</a>
 				</div>
-				<div class="portfolio-items items last">
-					<a href="#" class="portfolio-item item">
-						<span class="categories">Сайт компании</span>
-						<h3>Кот Симон</h3>
+				<div class="portfolio-items items">
+					<a href="https://prohtml.github.io/Mark" class="portfolio-item item" target="_blank">
+						<img src="img/portfolio4.png" alt="Перейти к просмотру">
 					</a>
-					<a href="#" class="portfolio-item item">
-						<span class="categories">Сайт компании</span>
-						<h3>Mark</h3>
+					<a href="https://prohtml.github.io/Julia" class="portfolio-item item" target="_blank">
+						<img src="img/portfolio5.png" alt="Перейти к просмотру">
 					</a>
-					<a href="#" class="portfolio-item item">
-						<span class="categories">Сайт компании</span>
-						<h3>Lovece</h3>
+					<a href="https://prohtml.github.io/REMONTIV" class="portfolio-item item" target="_blank">
+						<img src="img/portfolio6.png" alt="Перейти к просмотру">
 					</a>
 				</div>
-				<a href="#" class="btn">Посмотреть все работы</a>
+				<a href="portfolio.html" class="btn">Посмотреть все работы</a>
 			</div>
 		</div>
-		<div class="shadow block testimotials" id="testimotials">
+		<div class="block testimotials" id="testimotials">
 			<div class="wrapper">
 				<span class="foreword">Отзывы</span>
 				<img src="img/zig.png" class="icon-bg">
-				<h2>Клиенты обо мне</h2>
+				<h2>Обо мне пишут</h2>
 				<div class="testimotials-slider">
 					<div>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
@@ -161,26 +159,22 @@
 				</div>
 			</div>
 		</div>
-		<div class="shadow block contacts" id="contacts">
+		<hr>
+		<div class="block contacts" id="contacts">
 			<div class="wrapper">
 				<span class="foreword">Контакты</span>
 				<img src="img/zig.png" class="icon-bg">
 				<h2>Понравились работы?</h2>
 				<p class="d-block">Давайте сотрудничать! Вместе мы сможем реализовать замечательные сайты. Осталось только созвониться.</p>
 				<div class="contacts-items items">
-					<a class="btn" href="tel:+79774976285">Позвонить</a>
-					<a class="btn" href=" https://wa.me/79774976285">Написать в WhatsApp</a>
-					<a class="btn"  href="viber://chat?number=79774976285">Написать в Viber</a>
+					<a href="tel:+79774976285" class="contacts-item item" target="_blank" title="+79774976285"><img src="img/phone.png" class="icon d-block">Позвонить</a>
+					<a href="https://wa.me/79774976285" class="contacts-item item" target="_blank" title="+79774976285"><img src="img/whatsapp.png" class="icon d-block">Написать в WhatsApp</a>
+					<a href="https://tlgg.ru/9774976285" class="contacts-item item" target="_blank" title="+79774976285"><img src="img/telegram.png" class="icon d-block">Написать в Telegram</a>
 				</div>
 			</div>
 		</div>
 		<footer>
 			<div class="copyright">
-				<div class="footer-contacts d-flex">
-					<a href="tel:+79774976285">+7 (977) 497-62-85</a>
-					<span>|</span>
-					<a href="mailto:prohtml@bk.ru">prohtml@bk.ru</a>
-				</div>
 				<span>proHTML, 2020</span>
 			</div>
 		</footer>
