--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 				<div class="contacts-items items">
 					<a href="tel:+79774976285" class="contacts-item item" target="_blank" title="+79774976285"><img src="img/phone.png" class="icon d-block">Позвонить</a>
 					<a href="https://wa.me/79774976285" class="contacts-item item" target="_blank" title="+79774976285"><img src="img/whatsapp.png" class="icon d-block">Написать в WhatsApp</a>
-					<a href="hhttps://tlgg.ru/@grey_ugh" class="contacts-item item" target="_blank" title="+79774976285"><img src="img/telegram.png" class="icon d-block">Написать в Telegram</a>
+					<a href="hhttps://tlgg.ru/grey_ugh" class="contacts-item item" target="_blank" title="+79774976285"><img src="img/telegram.png" class="icon d-block">Написать в Telegram</a>
 				</div>
 			</div>
 		</div>
