--- a/index.html
+++ b/index.html
@@ -89,9 +89,13 @@
 				<span class="foreword">Технологии</span>
 				<img src="img/zig.png" class="icon-bg">
 				<h2>Чем я это делаю</h2>
-				<div class="technologies-slider">
-					<div><img src="img/coreldraw.png" class="icon-bg" title="CorelDRaw" alt="CorelDRaw"></div>
-					<div><img src="img/photoshop.png" class="icon-bg" title="Adobe Photoshop" alt="Adobe Photoshop"></div>
+				<div class="technologies-items items">
+					<div class="technologies-item item">
+						<img src="img/coreldraw.png" class="icon-bg" title="CorelDRaw" alt="CorelDRaw">
+					</div>
+					<div class="technologies-item item">
+						<img src="img/photoshop.png" class="icon-bg" title="Adobe Photoshop" alt="Adobe Photoshop">
+					</div>
 					<div><img src="img/html.png" class="icon-bg" title="HTML" alt="HTML"></div>
 					<div><img src="img/css.png" class="icon-bg" title="CSS" alt="CSS"></div>
 					<div><img src="img/js.png" class="icon-bg" title="JavaScript" alt="JavaScript"></div>
