--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<meta name="theme-color" content="#281356">
-	<title>proHTML - Создание и продвижение сайтов</title>
+	<title>proHTML - Разработка сайтов "под ключ"</title>
 	<link href="img/icon.png" rel="shortcut icon">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -25,14 +25,14 @@
 				<ul class="d-flex">
 					<li><a href="#services">Услуги</a></li>
 					<li><a href="#portfolio">Портфолио</a></li>
+					<li><a href="#price">Цены</a></li>
 					<li><a href="#testimotials">Отзывы</a></li>
 					<li><a href="#contacts">Контакты</a></li>
 				</ul>
 			</nav>
-			<a href="tel:+79774976285" class="number">+79774976285</a>
 		</header>
 		<div class="block preview block-img" id="preview">
-   			<h1><img src="img/logo-word.png" alt="proHTML"> - Создание и продвижение сайтов</h1>
+   			<h1><img src="img/logo-word.png" alt="proHTML"> - разработка сайтов "под ключ"!</h1>
 			<img src="img/zig-light.png" class="icon-bg">
 			<p>Вам нужен сайт?! Адаптивный, с высокой скоростью загрузки? Landing-Page, сайт-визитка или интернет-магазин? Тогда звоните!</p>
 			<a class="btn" href="tel:+79774976285" title="+79774976285">Позвонить сейчас</a>
@@ -92,24 +92,70 @@
 				<div class="technologies-items items">
 					<div class="technologies-item item">
 						<img src="img/coreldraw.png" class="icon-bg" title="CorelDRaw" alt="CorelDRaw">
+						<h3>CorelDraw</h3>
 					</div>
 					<div class="technologies-item item">
 						<img src="img/photoshop.png" class="icon-bg" title="Adobe Photoshop" alt="Adobe Photoshop">
+						<h3>Adobe Photoshop</h3>
 					</div>
-					<div><img src="img/html.png" class="icon-bg" title="HTML" alt="HTML"></div>
-					<div><img src="img/css.png" class="icon-bg" title="CSS" alt="CSS"></div>
-					<div><img src="img/js.png" class="icon-bg" title="JavaScript" alt="JavaScript"></div>
-					<div><img src="img/figma.png" class="icon-bg" title="Figma" alt="Figma"></div>
-					<div><img src="img/bootstrap.png" class="icon-bg" title="Bootstrap" alt="Bootstrap"></div>
-					<div><img src="img/illustrator.png" class="icon-bg" title="Adobe Illustrator" alt="Adobe Illustrator"></div>
-					<div><img src="img/git.png" class="icon-bg" title="Git" alt="Git"></div>
-					<div><img src="img/jquery.png" class="icon-bg" title="jQuery" alt="jQuery"></div>
-					<div><img src="img/axure.png" class="icon-bg" title="Axure" alt="Axure"></div>
-					<div><img src="img/xd.png" class="icon-bg" title="Adobe XD" alt="Adobe XD"></div>
-					<div><img src="img/wordpress.png" class="icon-bg" title="Wordpress" alt="Wordpress"></div>
-					<div><img src="img/joomla.png" class="icon-bg" title="Joomla" alt="Joomla"></div>
-					<div><img src="img/moguta.png" class="icon-bg" title="Moguta CMS" alt="Moguta CMS"></div>
+					<div class="technologies-item item">
+						<img src="img/html.png" class="icon-bg" title="HTML" alt="HTML">
+						<h3>HTML</h3>
+					</div>
+					<div class="technologies-item item">
+						<img src="img/css.png" class="icon-bg" title="CSS" alt="CSS">
+						<h3>CSS</h3>
+					</div>
+					<div class="technologies-item item">
+						<img src="img/js.png" class="icon-bg" title="JavaScript" alt="JavaScript">
+						<h3>JavaScript</h3>
+					</div>
 				</div>
+				<div class="technologies-items items">
+					<div class="technologies-item item">
+						<img src="img/figma.png" class="icon-bg" title="Figma" alt="Figma">
+						<h3>Figma</h3>
+					</div>
+					<div class="technologies-item item">
+						<img src="img/bootstrap.png" class="icon-bg" title="Bootstrap" alt="Bootstrap">
+						<h3>Bootstrap</h3>
+					</div>
+					<div class="technologies-item item">
+						<img src="img/illustrator.png" class="icon-bg" title="Adobe Illustrator" alt="Adobe Illustrator">
+						<h3>Adobe Illustrator</h3>
+					</div>
+					<div class="technologies-item item">
+						<img src="img/git.png" class="icon-bg" title="Git" alt="Git">
+						<h3>Git</h3>
+					</div>
+					<div class="technologies-item item">
+						<img src="img/jquery.png" class="icon-bg" title="jQuery" alt="jQuery">
+						<h3>jQuery</h3>
+					</div>
+				</div>
+				<div class="technologies-items items">
+					<div class="technologies-item item">
+						<img src="img/axure.png" class="icon-bg" title="Axure" alt="Axure">
+						<h3>Axure</h3>
+					</div>
+					<div class="technologies-item item">
+						<img src="img/xd.png" class="icon-bg" title="Adobe XD" alt="Adobe XD">
+						<h3>Adobe XD</h3>
+					</div>
+					<div class="technologies-item item">
+						<img src="img/wordpress.png" class="icon-bg" title="Wordpress" alt="Wordpress">
+						<h3>Wordpress</h3>
+					</div>
+					<div class="technologies-item item">
+						<img src="img/joomla.png" class="icon-bg" title="Joomla" alt="Joomla">
+						<h3>Joomla</h3>
+					</div>
+					<div class="technologies-item item">
+						<img src="img/moguta.png" class="icon-bg" title="Moguta CMS" alt="Moguta CMS">
+						<h3>Moguta CMS</h3>
+					</div>
+				</div>
+				<span class="treedots">...</span>
 			</div>
 		</div>
 		<div class="block portfolio block-clr" id="portfolio">
@@ -119,29 +165,64 @@
 				<h2>Мои работы</h2>
 				<div class="portfolio-items items">
 					<a href="https://prohtml.github.io/Boostfolia" class="portfolio-item item" target="_blank">
-						<img src="img/portfolio1.png" alt="Перейти к просмотру">
+						<img src="img/portfolio1.png" alt="Перейти к просмотру" title="Boostfolia">
 					</a>
 					<a href="https://prohtml.github.io/Lovece" class="portfolio-item item" target="_blank">
-						<img src="img/portfolio2.png" alt="Перейти к просмотру">
+						<img src="img/portfolio2.png" alt="Перейти к просмотру" title="Lovece">
 					</a>
 					<a href="https://prohtml.github.io/KotSimon" class="portfolio-item item" target="_blank">
-						<img src="img/portfolio3.png" alt="Перейти к просмотру">
+						<img src="img/portfolio3.png" alt="Перейти к просмотру" title="Кот Симон">
 					</a>
 				</div>
 				<div class="portfolio-items items">
 					<a href="https://prohtml.github.io/Mark" class="portfolio-item item" target="_blank">
-						<img src="img/portfolio4.png" alt="Перейти к просмотру">
+						<img src="img/portfolio4.png" alt="Перейти к просмотру" title="Mark">
 					</a>
 					<a href="https://prohtml.github.io/Julia" class="portfolio-item item" target="_blank">
-						<img src="img/portfolio5.png" alt="Перейти к просмотру">
+						<img src="img/portfolio5.png" alt="Перейти к просмотру" title="Мастерская Джулия">
 					</a>
 					<a href="https://prohtml.github.io/REMONTIV" class="portfolio-item item" target="_blank">
-						<img src="img/portfolio6.png" alt="Перейти к просмотру">
+						<img src="img/portfolio6.png" alt="Перейти к просмотру" title="REMONTIV">
 					</a>
 				</div>
 				<a href="portfolio.html" class="btn">Посмотреть все работы</a>
 			</div>
 		</div>
+		<div class="block price" id="price">
+			<div class="wrapper">
+				<span class="foreword">Цены</span>
+				<img src="img/zig.png" class="icon-bg">
+				<h2>Прайс-лист</h2>
+				<div class="price-items items">
+					<div class="price-item item">
+						<span>Landing Page</span>
+						<span class="clr">от 7500&#8381;</span>
+					</div>
+					<div class="price-item item">
+						<span>Сайт-портфолио</span>
+						<span class="clr">от 8000&#8381;</span>
+					</div>
+					<div class="price-item item">
+						<span>Сайт-визитка</span>
+						<span class="clr">от 10000&#8381;</span>
+					</div>
+					<div class="price-item item">
+						<span>Новостной портал / блог</span>
+						<span class="clr">от 13000&#8381;</span>
+					</div>
+					<div class="price-item item">
+						<span>Интернет-каталог</span>
+						<span class="clr">от 15000&#8381;</span>
+					</div>
+					<div class="price-item item">
+						<span>Интернет-магазин</span>
+						<span class="clr">от 25000&#8381;</span>
+					</div>
+				</div>
+				<a class="btn" href="tel:+79774976285">Позвонить сейчас</a>
+			</div>
+		</div>
+		<hr>
 		<div class="block testimotials" id="testimotials">
 			<div class="wrapper">
 				<span class="foreword">Отзывы</span>
