--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<meta name="theme-color" content="#281356">
+	<meta name="description" content="Быстрая и качественная разработка сайтов! Разработка Landing-Page, сайты-визитки, интернет-магазины, сайты-каталоги, сайты-портфолио, новостные порталы. Мы на связи!">
+	<meta name="keywords" content="сайты, разработка сайтов, продвижение сайтов, сайт заказать, сайт купить">
+	<meta name="copyright" content="proHTML">
 	<title>proHTML - Разработка сайтов "под ключ"</title>
 	<link href="img/icon.png" rel="shortcut icon">
 	<link rel="stylesheet" href="css/main.css">
@@ -81,6 +84,7 @@
 						<p>Подключение сервисов Яндекс.Метрика, Яндекс.Вебмастер, Google Analytics и др.</p>
 					</div>
 				</div>
+				<span class="treedots">...</span>
 			</div>
 		</div>
 		<hr>
@@ -196,23 +200,23 @@
 				<div class="price-items items">
 					<div class="price-item item">
 						<span>Landing Page</span>
-						<span class="clr">от 7500&#8381;</span>
+						<span class="clr">от 7000&#8381;</span>
 					</div>
 					<div class="price-item item">
 						<span>Сайт-портфолио</span>
 						<span class="clr">от 8000&#8381;</span>
 					</div>
 					<div class="price-item item">
+						<span>Новостной портал / блог</span>
+						<span class="clr">от 9000&#8381;</span>
+					</div>
+					<div class="price-item item">
 						<span>Сайт-визитка</span>
 						<span class="clr">от 10000&#8381;</span>
 					</div>
 					<div class="price-item item">
-						<span>Новостной портал / блог</span>
+						<span>Сайт-каталог</span>
 						<span class="clr">от 13000&#8381;</span>
-					</div>
-					<div class="price-item item">
-						<span>Интернет-каталог</span>
-						<span class="clr">от 15000&#8381;</span>
 					</div>
 					<div class="price-item item">
 						<span>Интернет-магазин</span>
@@ -249,13 +253,38 @@
 			<div class="wrapper">
 				<span class="foreword">Контакты</span>
 				<img src="img/zig.png" class="icon-bg">
-				<h2>Понравились работы?</h2>
-				<p class="d-block">Давайте сотрудничать! Вместе мы сможем реализовать замечательные сайты. Осталось только созвониться.</p>
+				<h2>Свяжитесь со мной</h2>
 				<div class="contacts-items items">
-					<a href="tel:+79774976285" class="contacts-item item" target="_blank" title="+79774976285"><img src="img/phone.png" class="icon d-block">Позвонить</a>
-					<a href="https://wa.me/79774976285" class="contacts-item item" target="_blank" title="+79774976285"><img src="img/whatsapp.png" class="icon d-block">Написать в WhatsApp</a>
-					<a href="hhttps://tlgg.ru/grey_ugh" class="contacts-item item" target="_blank" title="+79774976285"><img src="img/telegram.png" class="icon d-block">Написать в Telegram</a>
+					<div class="contacts-item item">
+						<span>Номер телефона</span>
+						<a href="tel: +79774976285">+7 (977) 497-62-85</a>
+					</div>
+					<div class="contacts-item item">
+						<span>Электронная почта</span>
+						<a href="mailto: prohtml@bk.ru">prohtml@bk.ru</a>
+					</div>
 				</div>
+				<div class="contacts-btns d-flex">
+					<a href="https://wa.me/79774976285" target="_blank">
+						<div class="btn-content">
+							<img src="img/whatsapp.png" alt="WhatsApp" class="icon">
+							<span>Написать в WhatsApp</span>
+						</div>
+					</a>
+					<a href="http://vk.com/write255261664" target="_blank">
+						<div class="btn-content">
+							<img src="img/vk.png" alt="VK" class="icon">
+							<span>Написать в VK</span>
+						</div>
+					</a>
+					<a href="https://telegram.im/@grey_ugh" target="_blank">
+						<div class="btn-content">
+							<img src="img/telegram.png" alt="Telegram" class="icon">
+							<span>Написать в Telegram</span>
+						</div>
+					</a>
+				</div>
+				<span class="treedots">...</span>
 			</div>
 		</div>
 		<footer>
