--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<div class="wrapper">
 				<span class="foreword">Услуги</span>
 				<img src="img/zig.png" class="icon-bg">
-				<h2>Что я делаю</h2>
+				<h2>Что мы делаем</h2>
 				<div class="services-items items">
 					<div class="services-item item">
 						<img src="img/design.png" class="icon" alt="Дизайн">
@@ -92,7 +92,7 @@
 			<div class="wrapper">
 				<span class="foreword">Технологии</span>
 				<img src="img/zig.png" class="icon-bg">
-				<h2>Чем я это делаю</h2>
+				<h2>Чем мы это делаем</h2>
 				<div class="technologies-items items">
 					<div class="technologies-item item">
 						<img src="img/coreldraw.png" class="icon-bg" title="CorelDRaw" alt="CorelDRaw">
@@ -166,7 +166,7 @@
 			<div class="wrapper">
 				<span class="foreword">Портфолио</span>
 				<img src="img/zig-light.png" class="icon-bg">
-				<h2>Мои работы</h2>
+				<h2>Наши работы</h2>
 				<div class="portfolio-items items">
 					<a href="https://prohtml.github.io/Boostfolia" class="portfolio-item item" target="_blank">
 						<img src="img/portfolio1.png" alt="Перейти к просмотру" title="Boostfolia">
@@ -189,7 +189,7 @@
 						<img src="img/portfolio6.png" alt="Перейти к просмотру" title="REMONTIV">
 					</a>
 				</div>
-				<a href="portfolio.html" class="btn">Посмотреть все работы</a>
+				<!-- <a href="portfolio.html" class="btn">Посмотреть все работы</a> -->
 			</div>
 		</div>
 		<div class="block price" id="price">
@@ -227,11 +227,11 @@
 			</div>
 		</div>
 		<hr>
-		<div class="block testimotials" id="testimotials">
+		<!-- <div class="block testimotials" id="testimotials">
 			<div class="wrapper">
 				<span class="foreword">Отзывы</span>
 				<img src="img/zig.png" class="icon-bg">
-				<h2>Обо мне пишут</h2>
+				<h2>О нас пишут</h2>
 				<div class="testimotials-slider">
 					<div>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
@@ -247,13 +247,13 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<hr>
 		<div class="block contacts" id="contacts">
 			<div class="wrapper">
 				<span class="foreword">Контакты</span>
 				<img src="img/zig.png" class="icon-bg">
-				<h2>Свяжитесь со мной</h2>
+				<h2>Свяжитесь с нами</h2>
 				<div class="contacts-items items">
 					<div class="contacts-item item">
 						<span>Номер телефона</span>
@@ -271,13 +271,13 @@
 							<span>Написать в WhatsApp</span>
 						</div>
 					</a>
-					<a href="http://vk.com/write255261664" target="_blank">
+					<a href="https://vk.com/im?sel=-187260402" target="_blank">
 						<div class="btn-content">
 							<img src="img/vk.png" alt="VK" class="icon">
 							<span>Написать в VK</span>
 						</div>
 					</a>
-					<a href="https://telegram.im/@grey_ugh" target="_blank">
+					<a href="https://t.me/pro_html" target="_blank">
 						<div class="btn-content">
 							<img src="img/telegram.png" alt="Telegram" class="icon">
 							<span>Написать в Telegram</span>
